fix widget handle from not showing

--- a/genesis/plugins/sysmon/files/dashboard.less
+++ b/genesis/plugins/sysmon/files/dashboard.less
@@ -5,7 +5,7 @@
     width: 375px;
 
     > .handle {
-        background: url('/dl/dashboard/handle.png');
+        background: url('/dl/sysmon/handle.png');
         width: 6px;
         height: 20px;
         margin: 3px 3px 3px 0;
